--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,35 +1,39 @@
 services:
   django:
-    build: .
+    build:
+      context: .
+      dockerfile: ./docker/django/Dockerfile
     restart: always
     volumes:
       - ./django_transaction_app:/app/django_transaction_app
-    ports:
-      - "8000:8000"
+      - static_volume:/app/django_transaction_app/staticfiles
+    expose:
+      - 8000
     depends_on:
       - db
-    environment:
-      MYSQL_HOST: db
-      MYSQL_DATABASE: django_transaction_app
-      MYSQL_USER: django
-      MYSQL_PASSWORD: django
-      DJANGO_DEBUG: false
-      # PYTHONPATH: /app/django_transaction_app
+    env_file: .env
   db:
-    image: mysql:8
+    build:
+      context: .
+      dockerfile: ./docker/db/Dockerfile
     restart: "no"
     ports:
       - "3306:3306"
-    healthcheck:
-        test: ["CMD", "curl", "-f", "http://localhost:15672"]
-        interval: 5s
-        timeout: 5s
-        retries: 15
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_USER: django
-      MYSQL_PASSWORD: django
-      MYSQL_DATABASE: django_transaction_app
-      MYSQL_ROOT_HOST: "%"
+    expose:
+      - 3306
+    env_file: .env
     volumes:
       - ./dbdata:/var/lib/mysql/
+  nginx:
+    image: nginx:1.19.0-alpine
+    restart: always
+    volumes:
+      - "./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
+      - static_volume:/static
+    ports:
+      - 80:80
+    depends_on:
+      - django
+
+volumes:
+  static_volume:
