--- a/docker/django/requirements.txt
+++ b/docker/django/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.8.1
 black==24.4.2
 click==8.1.7
 Django==5.0.4
+django-probes==1.7.0
 djangorestframework==3.15.1
 djangorestframework-jsonapi==6.1.0
 flake8==7.0.0
+gunicorn==22.0.0
 h11==0.14.0
 inflection==0.5.1
 isort==5.13.2
@@ -19,4 +21,3 @@ pyflakes==3.2.0
 sqlparse==0.5.0
 tomli==2.0.1
 typing_extensions==4.11.0
-uvicorn==0.29.0
